feat: payment service WIP
