# docs/swagger.yaml
@@ -108,6 +108,50 @@ definitions:
       per_page:
         type: integer
     type: object
+  payment.Response:
+    properties:
+      ad_id:
+        type: integer
+      confirmation_link:
+        type: string
+      created_at:
+        type: string
+      expires_at:
+        type: string
+      id:
+        type: integer
+      status:
+        type: string
+      tariff:
+        $ref: '#/definitions/tariff.Tariff'
+      transaction_id:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  tariff.Tariff:
+    properties:
+      createdAt:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      durationMin:
+        type: integer
+      id:
+        type: integer
+      isActive:
+        type: boolean
+      name:
+        type: string
+      price:
+        type: number
+      updatedAt:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -298,4 +342,34 @@ paths:
       summary: Add/remove ad to favorites
       tags:
       - Ads
+  /api/v1/payments:
+    post:
+      consumes:
+      - application/json
+      description: Регистрация платежа и генерация ссылки
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.BasicResponseDTO'
+            - properties:
+                data:
+                  $ref: '#/definitions/payment.Response'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Создание платежа
+      tags:
+      - Payments
 swagger: "2.0"
